--- a/Power.css
+++ b/Power.css
@@ -130,3 +130,23 @@ body {
     border-radius:3px;
     position:absolute ;
 }
+.icon-youtube{
+    background-color:red;
+    width:90px;
+    height:60px;
+    border:1px solid;
+    border-radius:10px;
+}
+
+.icon-youtube:after{
+    content:'';
+    width: 0;
+    height: 0;
+    border-top: 15px solid transparent;
+    border-left: 30px solid white;
+    border-bottom: 15px solid transparent;
+    position:absolute ;
+    left:41px;
+    top:22px;
+    outline:10px black;
+}
