--- a/Power.css
+++ b/Power.css
@@ -172,3 +172,10 @@ body {
      ;
      border-radius:5px;
 }
+.power-header{
+    width:100%;
+    height:65px;
+    background-color:#e54;
+    position:absolute ;
+    border-radius:2px;
+}
